# awesome

./: .env.example  .gitignore  CLAUDE.md  TRADING_BOT.md  check_reviews.sh  config.yaml  crontab.txt  decisions.csv  deploy.sh  log_decision.sh  main.py  process_tasks.py  pyproject.toml  requirements.txt  review.sh  tasks_server.py  vps_befehle.md
.claude/: settings.json
memory/: decisions.md  people.md  preferences.md  user.md
trading_bot/: __init__.py  ai_assistant.py  ai_validator.py  arbitrage_engine.py  arbitrage_scanner.py  backtester.py  cli.py  config.py  content_creator.py  data_downloader.py  engine.py  exchange.py  fear_greed.py  logger.py  offline_sim.py  paper_trader.py  portfolio.py  reporter.py  risk.py  sentiment.py  telegram_commander.py  telegram_notifier.py  web_dashboard.py
trading_bot/strategies/: __init__.py  base.py  ema_crossover.py  ensemble.py  macd.py  rsi.py
website/: datenschutz.html  impressum.html  index.html  main.js  robots.txt  sitemap.xml  style.css
