[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "trading-bot"
version = "1.0.0"
description = "Automated crypto trading bot with backtesting and risk management"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.5.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "click>=8.1.0",
    "PyYAML>=6.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "pyarrow>=14.0.0",
    "ta-lib>=0.4.0",
]

[project.scripts]
trading-bot = "trading_bot.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["trading_bot*"]
